<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- partitions  -->
    <string name="title_activity_detail">Game Details</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_product">Products</string>
    <string name="title_activity_product_detail">Product Details</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_group_detail">Group Details</string>
    <string name="title_activity_socialities">Social</string>
    <string name="title_activity_socialities_detail"> </string>
    <string name="title_activity_signUp">Sign Up</string>
    <string name="games">Games</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="socialities">Social</string>
    <string name="logOut">Log Out</string>
    <string name="contact_us">Contact Us</string>


    <!-- game selected -->
    <string name="details">Details</string>
    <string name="points">Points</string>
    <string name="performance">Performance :</string>
    <string name="play">Play</string>
    <!-- sign and sign up -->
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="make_account">Sign Up </string>
    <string name="username">Username :</string>
    <string name="emailLogin">E-mail</string>
    <string name="password">Password :</string>
    <string name="passwordLogin">Password</string>
    <string name="repeatPasswrord">Re-type Password :</string>
    <string name="date_of_birth">Date of birth :</string>
    <string name="user_type">User Type :</string>
    <string name="player">Player</string>
    <string name="doctor">Doctor</string>
    <string name="parent">Parent</string>
    <string name="country">Country</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <!-- profile -->
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="performance_profile">Performance</string>
    <!-- group item -->
    <string name="members">Members</string>
    <string name="group_games">Group Games</string>
    <string name="performance_groupItem">Performance</string>
    <string name="topTen">Top 10</string>
    <!-- product item -->
    <string name="product_details">Details</string>
    <string name="buy_product">Buy Product</string>

    <string name="NewGroup">NEW GROUP</string>
    <string name="DialogGroupName">Group Name</string>
    <string name="DialogDoctorName">Doctor Name</string>
    <string name="CreatGroup">Create Group</string>
    <string name="CancelCreatingGroup">Cancel</string>

    <string name="Others">Others</string>

    <string name="NewGame">New Game</string>
    <string name="DialogGameName">Game Name</string>
    <string name="DialogGameDetails">Game details</string>
    <string name="CreatGame">Create Game</string>
    <string name="CancelCreatingGame">Cancel</string>

    <string name="ContactUs">Contact Us</string>
    <string name="DialogTitle">Title</string>
    <string name="DialogMessage">Enter Message</string>
    <string name="Submit">Submit Message</string>
    <string name="CancelMessage">Cancel</string>


    <string name="Accuracy">Accuracy</string>
    <string name="AverageTime">Average Time</string>

    <string name="PlayAgain">Play Again</string>
    <string name="Exit">Exit</string>

    <string name="Points">Points:</string>
    <string name="Accuracys">Accuracy:</string>
    <string name="AverageT">Average Time:</string>
    <string name="Sec"> Sec</string>

    <string name="EditPicture">Edit Picture</string>
    <string name="DOB">Date Of Birth</string>
    <string name="Name">Name</string>
    <string name="Email">E-mail</string>
    <string name="Friends">Friends</string>


























































</resources>
