<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Games"
            android:icon="@drawable/ic_mood_black_36dp"
            android:title="@string/games" />
        <item
            android:id="@+id/nav_Groups"
            android:icon="@drawable/ic_people_black_36dp"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_account_circle_black_36dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_Socialities"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/socialities" />
    </group>

    <item android:title="@string/Others">
        <menu>
            <item
                android:id="@+id/nav_Log_out"
                android:icon="@drawable/ic_logout_128"
                android:title="@string/logOut" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
