<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/signning_background"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/heroes_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@android:drawable/toast_frame"/>

    <EditText
        android:id="@+id/edttxt_email_login"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/emailLogin"
        android:textColorHint="@color/colorAccent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/edttxt_password_login"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:hint="@string/passwordLogin"
        android:textColorHint="@color/colorAccent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@color/buttons"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/signUp_button_from_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/make_account"
        android:background="@color/buttons"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp">

            <TextView
                android:id="@+id/forgot_password_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal|top"
                android:text="@string/forgot_password"
                android:textIsSelectable="true"
                android:textColor="@color/textviews"
                />

        </FrameLayout>


    </LinearLayout>

    </ScrollView>