<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/users"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EditPicture"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal|center_vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text="@string/Name"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text="@string/DOB"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text="@string/Email"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/textviews"
            />

        <!--<GridView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--&gt;-->
        <!--</GridView>-->
        <!--<include-->
            <!--layout="@layout/grid_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--></include>-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/textviews"
            />
        <Button
            android:id="@+id/friendsListButton"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Friends"
            android:background="@color/brownButtons"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"/>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@android:drawable/ic_menu_myplaces"-->
                <!--android:layout_gravity="center_horizontal|center_vertical"/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@android:drawable/ic_menu_myplaces"-->
                <!--android:layout_gravity="center_horizontal|center_vertical"/>-->
            <!--/>-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@android:drawable/ic_menu_myplaces"-->
                <!--android:layout_gravity="center_horizontal|center_vertical"/>-->
            <!--/>-->
            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@android:drawable/ic_menu_myplaces"-->
                <!--android:layout_gravity="center_horizontal|center_vertical"/>-->
            <!--/>-->
        <!--</LinearLayout>-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"></FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/performance_profile"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/textviews"
            />




        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:src="@android:drawable/dialog_holo_light_frame"-->

            <!--/>-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"></FrameLayout>
    </LinearLayout>

    </ScrollView>
